# ascii-to-factorio-blueprint

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
ascii_2_blueprint/: __init__.py  default_blocks.txt
ascii_2_blueprint/samples/: rose.txt
ascii_2_blueprint/utils/: blueprint.py  generate_model.py  model.py  vector2.py  web.py
