[metadata]
name = ascii-to-factorio-blueprint
version = 0.1.0
author = Ciarán
description = Convert ascii art to a factorio blueprint.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ciarands/ascii-to-factorio-blueprint
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    click==8.1.7
    homoglyphs==2.0.4
    rich==13.7.1
python_requires = >=3.6

[options.entry_points]
console_scripts =
    ascii-2-blueprint = ascii_2_blueprint.__init__:main